# Reversi-Game

Reversi-Game/client/: makefile
Reversi-Game/client/src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  ConsolePrinting.cpp  ConsolePrinting.h  Display.h  FirstClient.cpp  FirstClient.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameLogicInterface.cpp  GameLogicInterface.h  HumanPlayer.cpp  HumanPlayer.h  MajorGameLogic.cpp  MajorGameLogic.h  Player.cpp  Player.h  SecondClient.cpp  SecondClient.h  main.cpp
Reversi-Game/client/tests/: BoardTest.cpp  CellTest.cpp  GameLogicTest.cpp  GameTest.cpp  HumanPlayerTest.cpp  MajorGameLogicTest.cpp  PlayerTest.cpp  firstClientTest.cpp  secoundClient.cpp
Reversi-Game/server/: CMakeLists.txt  makefile
Reversi-Game/server/src/: CMakeLists.txt  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  GameControlling.cpp  GameControlling.h  JoinCommand.cpp  JoinCommand.h  ListCommand.cpp  ListCommand.h  PlayRoom.cpp  PlayRoom.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  main.cpp
